--- a/index.html
+++ b/index.html
@@ -6,19 +6,55 @@
 <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Frontend Mentor | Stats preview card component</title>
+  <title>Julia | Stats preview card component</title>
 
 </head>
 <body>
-
-  Get insights that help your business grow.
-
+<article class="main-card__container">
+  <picture class="main-card__header-image">
+  </picture>
+  <h1 class="main-card__title">
+     Get 
+     <span class="main-card__title-accented-word">
+      insights
+     </span>
+      that help your business grow.
+  </h1>
+  <p class="main-card__title-caption">
   Discover the benefits of data analytics and make better decisions regarding revenue, customer 
   experience, and overall efficiency.
+  </p>
+  <div class="main-card__stat-flexgroup">
+    <div class="main-card__stat-flexstacking">
+      <h2 class="main-card__stat-title">
+      10k+
+      </h2>
+      <p class="main-card__stat-caption">
+        companies 
+      </p>
+    </div>
+    <div class="main-card__stat-flexstacking">
+      <h3 class="main-card__stat-title">
+        314 
+        </h3>
+        <p class="main-card__stat-caption">
+          templates 
+        </p>
+    </div>
+    <div class="main-card__stat-flexstacking">
+      <h4 class="main-card__stat-title">
+        12m+
+        </h4>
+        <p class="main-card__stat-caption">
+          queries
+        </p>
+    </div>
+  </div>
+</article>
+ 
 
-  10k+ companies
-  314 templates
-  12m+ queries
+
+ 
 
 
 </body>
