Mobile version nearly done - img filter needs to be fixed

--- a/index.html
+++ b/index.html
@@ -12,50 +12,47 @@
 <body>
 <article class="main-card__container">
   <picture class="main-card__header-image">
+    <img src="images/image-header-mobile.jpg" alt="Header for Mobile of people working and talking">
   </picture>
-  <h1 class="main-card__title">
-     Get 
-     <span class="main-card__title-accented-word">
-      insights
-     </span>
-      that help your business grow.
-  </h1>
-  <p class="main-card__title-caption">
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
-  </p>
-  <div class="main-card__stat-flexgroup">
-    <div class="main-card__stat-flexstacking">
-      <h2 class="main-card__stat-title">
-      10k+
-      </h2>
-      <p class="main-card__stat-caption">
-        companies 
-      </p>
-    </div>
-    <div class="main-card__stat-flexstacking">
-      <h3 class="main-card__stat-title">
-        314 
-        </h3>
-        <p class="main-card__stat-caption">
-          templates 
-        </p>
-    </div>
-    <div class="main-card__stat-flexstacking">
-      <h4 class="main-card__stat-title">
-        12m+
-        </h4>
-        <p class="main-card__stat-caption">
-          queries
-        </p>
-    </div>
-  </div>
+  <div class="main-card__elements-margin-padding">
+    <h1 class="main-card__title">
+      Get 
+      <span class="main-card__title-accented-word">
+       insights
+      </span>
+       that help your business grow.
+   </h1>
+   <p class="main-card__title-caption">
+   Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+   experience, and overall efficiency.
+   </p>
+   <div class="main-card__stat-flexgroup">
+     <div class="main-card__stat-flexstacking">
+       <h2 class="main-card__stat-title">
+       10k+
+       </h2>
+       <p class="main-card__stat-caption">
+         companies 
+       </p>
+     </div>
+     <div class="main-card__stat-flexstacking">
+       <h3 class="main-card__stat-title">
+         314 
+         </h3>
+         <p class="main-card__stat-caption">
+           templates 
+         </p>
+     </div>
+     <div class="main-card__stat-flexstacking">
+       <h4 class="main-card__stat-title">
+         12m+
+         </h4>
+         <p class="main-card__stat-caption">
+           queries
+         </p>
+     </div>
+   </div>
+   </div>
 </article>
- 
-
-
- 
-
-
 </body>
 </html>
