Trying to make the card responsive

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 <article class="main-card__container">
   <picture class="main-card__header-image">
+    <source srcset="images/image-header-desktop.jpg" media="(min-width: 565px)">
     <img src="images/image-header-mobile.jpg" alt="Header for Mobile of people working and talking">
   </picture>
   <div class="main-card__elements-margin-padding">
